@@ -231,6 +231,160 @@ literal|0
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// Build an explicit list that includes the debug comp.
+comment|//-----------------------------------------------
+name|names0
+operator|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+expr_stmt|;
+name|names0
+operator|.
+name|add
+argument_list|(
+name|FacetComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|)
+expr_stmt|;
+name|names0
+operator|.
+name|add
+argument_list|(
+name|DebugComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|)
+expr_stmt|;
+name|names0
+operator|.
+name|add
+argument_list|(
+name|MoreLikeThisComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|)
+expr_stmt|;
+name|args
+operator|=
+operator|new
+name|NamedList
+argument_list|()
+expr_stmt|;
+name|args
+operator|.
+name|add
+argument_list|(
+name|SearchHandler
+operator|.
+name|INIT_COMPONENTS
+argument_list|,
+name|names0
+argument_list|)
+expr_stmt|;
+name|handler
+operator|=
+operator|new
+name|SearchHandler
+argument_list|()
+expr_stmt|;
+name|handler
+operator|.
+name|init
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+name|handler
+operator|.
+name|inform
+argument_list|(
+name|core
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|handler
+operator|.
+name|getComponents
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|core
+operator|.
+name|getSearchComponent
+argument_list|(
+name|FacetComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|)
+argument_list|,
+name|handler
+operator|.
+name|getComponents
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|core
+operator|.
+name|getSearchComponent
+argument_list|(
+name|DebugComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|)
+argument_list|,
+name|handler
+operator|.
+name|getComponents
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|core
+operator|.
+name|getSearchComponent
+argument_list|(
+name|MoreLikeThisComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|)
+argument_list|,
+name|handler
+operator|.
+name|getComponents
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
 comment|// First/Last list
 comment|//-----------------------------------------------
 name|names0
@@ -376,6 +530,31 @@ operator|.
 name|getSearchComponent
 argument_list|(
 name|FacetComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|)
+argument_list|,
+name|comps
+operator|.
+name|get
+argument_list|(
+name|comps
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//Debug component is always last in this case
+name|assertEquals
+argument_list|(
+name|core
+operator|.
+name|getSearchComponent
+argument_list|(
+name|DebugComponent
 operator|.
 name|COMPONENT_NAME
 argument_list|)
